# Platinum

./: .gitignore  CMakeLists.txt  README.md
inc/: io.hh  node.hh
src/: main.cc
